# dune-jupyter-course

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BSD.md  Dockerfile  LICENSE.md  README.md  TODO.md  environment.yml
.github/workflows/: ci.yml  container.yml
dune/: config-docker.opts  config-local.opts  config.opts
dune/jupyter-kernel/: CMakeLists.txt  config.h.cmake  dune.module  jupyter-kernel.pc.in
dune/jupyter-kernel/dune/: CMakeLists.txt  common.hh  geometry.hh  grid.hh  jupyter.hh
dune/jupyter-kernel/dune/jupyter-kernel/: CMakeLists.txt  parametertree.hh  printgrid.hh  printrefelem.hh  vtkwriter.hh
notebooks/: grid-exercise-solution.ipynb  grid-exercise1.ipynb  pdelab-tutorial00.ipynb  tutorial00.ini  unitsquare.msh
notebooks/.ipynb_checkpoints/: hello_world-checkpoint.ipynb
notebooks/gridexercise/: .gitattributes  grid-exercise1.ipynb
notebooks/tutorial00/: .gitattributes  mypoissonp1.hh  pdelab-tutorial00.ipynb  poissonp1explanation.ipynb  solutionpoissonp1.hh
notebooks/tutorial01/: driver.hh  nitschenonlinearpoissonfem.hh  pdelab-tutorial01.ipynb  problem.hh  tutorial01.ini  unitcube.msh  unitsquare.geo
notebooks/tutorial02/: nonlinearpoissonfv.hh  pdelab-tutorial02.ipynb  problem.hh  tutorial02.ini  tutorial02.ipynb
notebooks/tutorial03/: .gitattributes  ex01nonLin.ogv  ex03BC.ogv  ex03timeBC.ogv  nonlinearheatfem.hh  pdelab-tutorial03.ipynb  problem.hh  tutorial03.ini
notebooks/tutorial04/: exercise04.ini  pdelab-tutorial04.ipynb  wave1dCNIE.ogv  wave2d.ogv  wavefem.hh
notebooks/tutorial05/: gridexercise_0.gnuplot  (+5 more)
(+9 files in other folders)
